# advent-of-code

./: BENCHMARKS.md  Cargo.toml  flake.nix
benches/: bench_all.rs
src/: main.rs
src/aoc/: mod.rs
src/aoc/days/: mod.rs  twenty_four.rs  twenty_three.rs
src/aoc/utils/: mod.rs
