[package]
name = "advent-of-code-2015"
version = "0.0.1"
edition = "2021"
default-run = "advent-of-code-2015"

[dependencies]
itertools = "0.13"
paste = "1.0"
convert_case = "0.6"

md-5 = "0.10"
base16ct = { version = "0.2", features = ["alloc"] }
petgraph = "0.6.5"
json = "0.12.4"
serde_json = "1.0.132"
lazy_static = "1.5.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_all"
harness = false
